--- a/cli/src/app/features/documents/components/document-filters.component.html
+++ b/cli/src/app/features/documents/components/document-filters.component.html
@@ -65,8 +65,8 @@
                  focus:ring-1 focus:ring-blue-500 focus:border-blue-500 
                  transition-colors duration-200"
         >
-          <option [value]="null">Tất cả</option>
-          <option *ngFor="let topic of topics" [value]="topic.id">{{ topic.name }}</option>
+          <option [ngValue]="null">Tất cả</option>
+          <option *ngFor="let topic of topics" [ngValue]="topic.id">{{ topic.name }}</option>
         </select>
       </div>
     </div>
@@ -97,8 +97,8 @@
                  focus:ring-1 focus:ring-blue-500 focus:border-blue-500 
                  transition-colors duration-200"
         >
-          <option [value]="null">Tất cả</option>
-          <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+          <option [ngValue]="null">Tất cả</option>
+          <option *ngFor="let category of categories" [ngValue]="category.id">{{ category.name }}</option>
         </select>
       </div>
     </div>
